Update Gyakko 2025 report: remove fee, refine profiles

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社逆光 忘年会2025 開催レポート</title>
-    <!-- Updated: 2025-12-28 23:36 -->
+    <!-- Updated: 2025-12-28 23:50 -->
     <style>
         body {
             font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
@@ -119,13 +119,12 @@
         <div class="meta-info">
             <p>日時: 2025年12月17日（水） 19:00〜</p>
             <p>場所: Bar Last Tango in Paris 3階 (広島)</p>
-            <p>参加費: 2,000円（食事代） + ドリンク別</p>
             <p>文責: 秋山 那由他</p>
         </div>
 
         <div class="intro">
             <p>2025年の瀬、広島の「Bar Last Tango in Paris」の3階を貸し切り、株式会社逆光主催の忘年会が開催されました。<br>
-                集まったのは、広島を拠点に活動するデザイナー、ライター、フォトグラファー、映像クリエイター、エンジニア、そして外構屋やスタントマンまで。</p>
+                集まったのは、広島を拠点に活動するデザイナー、ライター、フォトグラファー、映像クリエイター、エンジニア、そして便利屋まで。</p>
             <p>お食事は、日之出水産が運営する練り物専門店<strong>「ネッテ」</strong>の「練り物」や「カリカリがんす」。<br>
                 <strong>皆さん、ぜひ「ネッテ」に行ってくださいね！</strong><br>
                 酒と美食、そしてクリエイティブな会話に酔いしれた一夜の全記録です。
@@ -145,13 +144,10 @@
                                 波多野さんが独立直後に「HP作りたい」と相談に来た際、「まだその段階じゃない」と一蹴。「機能が情緒を上回ることはない」という信念のもと、まずは思想とブランディングの確立を叩き込みました。
                             </li>
                             <li><strong>「如水館のパンフレットで入学即決」</strong>: 倉田さんが制作した如水館中学校のパンフレットを見て、「ここなら！」と息子の受験を決意。</li>
-                            <li><strong>「合理的選択の結果」</strong>:
-                                息子さん（士くん）が見事合格するも、寮が中学生にはないことが発覚。結果、<strong>片道2時間半（アストラム〜JR〜バス）</strong>の通学が決定。</li>
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。
-                    </li>
+                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。</li>
                 </ul>
             </div>
 
@@ -164,8 +160,7 @@
                             <li>今回のプレゼント選びでは、「本当はたまごっち（1万円）をあげたかったけど予算オーバー」で断念。その代わり、トレンドを押さえたアイテムをチョイス。</li>
                         </ul>
                     </li>
-                    <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「写ルンです」</strong><br>「今すごい流行ってる。今日のご縁を記録に残してほしい」というエモい配慮。
+                    <li class="present-section"><strong>【プレゼント】</strong>: <strong>「写ルンです」</strong><br>「エモい写真を撮って欲しい」
                     </li>
                 </ul>
             </div>
@@ -181,24 +176,21 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。
-                    </li>
+                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。</li>
                 </ul>
             </div>
 
             <div class="person">
-                <span class="person-name">真殿 理瑛 (マドピー)</span>
-                <span class="person-role">デザイナー (大進創寫舘 デザイン部)</span>
+                <span class="person-name">真殿 理瑛</span>
+                <span class="person-role">デザイナー</span>
                 <ul>
                     <li><strong>【エピソード】</strong>:
                         <ul>
                             <li><strong>「元保育士」</strong>: 4年前まで保育士をしていた異色の経歴。そこからデザインを学び、現在はバリバリのデザイナーに。</li>
-                            <li><strong>「社長が言うセンス」</strong>: 勇社長からの「センスが問われるぞ」というプレッシャーを一身に受けながらプレゼントを選定。</li>
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。
-                    </li>
+                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
                 </ul>
             </div>
 
@@ -228,8 +220,7 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。
-                    </li>
+                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。</li>
                 </ul>
             </div>
 
@@ -245,8 +236,7 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。
-                    </li>
+                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。</li>
                 </ul>
             </div>
 
@@ -280,8 +270,7 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。
-                    </li>
+                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。</li>
                 </ul>
             </div>
 
@@ -316,14 +305,13 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。
-                    </li>
+                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
                 </ul>
             </div>
 
             <div class="person">
                 <span class="person-name">波多野 公平</span>
-                <span class="person-role">外構屋 (東広島)</span>
+                <span class="person-role">便利屋 (東広島)</span>
                 <ul>
                     <li><strong>【エピソード】</strong>:
                         <ul>
@@ -333,14 +321,13 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。
-                    </li>
+                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。</li>
                 </ul>
             </div>
 
             <div class="person">
                 <span class="person-name">ていてい</span>
-                <span class="person-role">フリーランス / バイクスタント</span>
+                <span class="person-role">フリーランス</span>
                 <ul>
                     <li><strong>【エピソード】</strong>:
                         <ul>
