Update Gyakko 2025 report: simplify Orishige profile

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -147,7 +147,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。</li>
+                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。
+                    </li>
                 </ul>
             </div>
 
@@ -176,7 +177,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。</li>
+                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。
+                    </li>
                 </ul>
             </div>
 
@@ -190,7 +192,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
+                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。
+                    </li>
                 </ul>
             </div>
 
@@ -216,11 +219,12 @@
                     <li><strong>【エピソード】</strong>:
                         <ul>
                             <li>デザインだけでなく、プロジェクト全体の「取りまとめ」やディレクションもこなす要石。</li>
-                            <li>真殿さんの「パソコンスクール」時代の先生でもある。</li>
+                            <li>真殿さんの先生でもある。</li>
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。</li>
+                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。
+                    </li>
                 </ul>
             </div>
 
@@ -236,7 +240,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。</li>
+                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。
+                    </li>
                 </ul>
             </div>
 
@@ -270,7 +275,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。</li>
+                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。
+                    </li>
                 </ul>
             </div>
 
@@ -305,7 +311,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
+                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。
+                    </li>
                 </ul>
             </div>
 
@@ -321,7 +328,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。</li>
+                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。
+                    </li>
                 </ul>
             </div>
 
