Update Gyakko 2025 report: refine Sugioka and Kurata profiles

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -251,7 +251,8 @@
                 <ul>
                     <li><strong>【エピソード】</strong>:
                         <ul>
-                            <li><strong>「以前からのご縁」</strong>: かつて廿日市の現場で佐々木さんのカメラアシスタントをしていた。時を経て再会し、現在は宮島「大元堂」の映像などを共に制作。
+                            <li><strong>「以前からのご縁」</strong>:
+                                かつて廿日市の現場で佐々木さんが携わるプロジェクトでカメラアシスタントをしていた。時を経て再会し、現在は宮島の映像などを共に制作。
                             </li>
                             <li><strong>「選挙と映像」</strong>: 選挙関連の映像制作など、硬派な現場でも活躍中。</li>
                         </ul>
@@ -263,7 +264,7 @@
 
             <div class="person">
                 <span class="person-name">倉田 美幸</span>
-                <span class="person-role">デザイナー (Thinc Form)</span>
+                <span class="person-role">デザイナー</span>
                 <ul>
                     <li><strong>【エピソード】</strong>:
                         <ul>
