Update Gyakko 2025 report: remove Isamu son reference from Kurata profile

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -270,8 +270,7 @@
                         <ul>
                             <li><strong>「乾杯の音頭」</strong>: 急な無茶振りにも関わらず、素晴らしい乾杯の音頭をありがとうございました！</li>
                             <li><strong>「如水館パンフの激闘」</strong>:
-                                昨年制作した如水館中学校のパンフレット。先生との熱いやり取りを経て、素晴らしいクオリティに仕上げました。その熱意が、勇さんの心を動かし（息子受験へ）、最高の成果物を生みました。
-                            </li>
+                                昨年制作した如水館中学校のパンフレット。先生との熱いやり取りを経て、素晴らしいクオリティに仕上げました。その熱意が、最高の成果物を生みました。</li>
                             <li>夫・圭司さんと共に「カフェバー」開業の夢も追う。</li>
                         </ul>
                     </li>
