Update Gyakko 2025 report: refine Nayuta profile

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -370,11 +370,11 @@
                     <li><strong>【エピソード】</strong>:
                         <ul>
                             <li>今回の幹事＆音声収録＆記事作成担当。</li>
-                            <li>毎日更新のPodcast「逆張りマーケラジオ」で、当日の様子も余すことなくコンテンツ化。</li>
+                            <li>毎週火曜日更新のPodcast「逆張りマーケラジオ」ディレクター。</li>
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>非公式「逆光ニット」</strong><br>自身のカフェのニットと同じ刺繍技術を使い、勝手に逆光ロゴを入れた世界に一つのニット。「原価ほぼ3,000円」のキラーアイテム。
+                        <strong>非公式「逆光スウェット」</strong><br>勝手に逆光ロゴを入れた世界に一つのスウェット。
                     </li>
                 </ul>
             </div>
