Update Gyakko 2025 report: add podcast promotion

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -380,6 +380,15 @@
             </div>
         </section>
 
+        <section
+            style="margin-top: 4rem; text-align: center; background-color: #f0f0f0; padding: 2rem; border-radius: 8px;">
+            <h2 style="margin-top: 0; border: none; padding: 0; background: none;">🎙️ 毎週火曜日は「逆張りマーケラジオ」</h2>
+            <p>逆光メンバーの思考や裏側を配信中。毎週火曜日の更新をぜひお聴きください！</p>
+            <p><a href="https://open.spotify.com/show/02abD398asPC5qrUWzEf88?si=68ad6aec8bfc48ad" target="_blank"
+                    style="display: inline-block; background-color: #1DB954; color: white; padding: 10px 20px; text-decoration: none; border-radius: 20px; font-weight: bold;">Spotifyで聴く</a>
+            </p>
+        </section>
+
         <footer>
             <p>2026年、この個性豊かなメンバーが「Bar × eSports」で再会するのか、「広島青春テラス」で新たなカップルが生まれているのか。<br>
                 逆光が生み出す渦に、今後も要注目です！</p>
