Update Gyakko 2025 report: white content bg and gift corrections

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>株式会社逆光 忘年会2025 開催レポート</title>
-    <!-- Updated: 2025-12-29 00:00 -->
+    <!-- Updated: 2025-12-29 00:15 -->
     <style>
         body {
             font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-            line-height: 2.0;
-            color: #e0e0e0;
+            line-height: 1.8;
+            color: #333;
             margin: 0;
             padding: 0;
             background-color: #050505;
-            /* Black background */
+            /* Black outer background */
         }
 
         /* Report Content Styles */
@@ -23,168 +23,142 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 40px 20px;
-            background: #050505;
+            background: white;
+            /* White content background */
             min-height: 100vh;
         }
 
         .logo-container {
             text-align: center;
-            margin-bottom: 3rem;
-            padding-top: 2rem;
+            margin-bottom: 2rem;
+            padding-top: 1rem;
+            background-color: #050505;
+            /* Black bg for logo integration */
+            margin: -40px -20px 2rem -20px;
+            padding: 40px 0 20px 0;
         }
 
         .logo-container img {
-            max-width: 250px;
+            max-width: 200px;
             height: auto;
-            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.2));
-            animation: fadeIn 2s ease-out;
         }
 
         h1 {
             font-size: 2rem;
-            border-bottom: 1px solid #333;
-            padding-bottom: 20px;
-            margin-bottom: 2rem;
-            text-align: center;
-            color: #fff;
-            letter-spacing: 0.05em;
+            border-bottom: 2px solid #000;
+            padding-bottom: 10px;
+            margin-bottom: 1rem;
+            color: #333;
         }
 
         h2 {
             font-size: 1.5rem;
-            margin-top: 4rem;
-            border-left: 4px solid #fff;
+            margin-top: 3rem;
+            border-left: 5px solid #000;
             padding-left: 15px;
-            color: #fff;
-            margin-bottom: 1.5rem;
+            background-color: #f4f4f4;
+            padding-top: 5px;
+            padding-bottom: 5px;
+            color: #333;
         }
 
         .meta-info {
-            background-color: #111;
-            padding: 20px;
-            border: 1px solid #222;
-            border-radius: 8px;
-            margin-bottom: 3rem;
-            color: #ccc;
+            background-color: #eee;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 2rem;
+            color: #333;
         }
 
         .meta-info p {
-            margin: 8px 0;
+            margin: 5px 0;
+            font-weight: bold;
         }
 
         .intro {
             font-size: 1.1rem;
-            margin-bottom: 3rem;
-            line-height: 2.2;
+            margin-bottom: 2rem;
+            color: #333;
         }
 
         .person {
-            margin-bottom: 2.5rem;
-            border: 1px solid #222;
-            background-color: #0a0a0a;
-            padding: 2rem;
-            border-radius: 12px;
-            transition: transform 0.2s ease, border-color 0.2s ease;
-        }
-
-        .person:hover {
-            border-color: #444;
-            transform: translateY(-2px);
+            margin-bottom: 2rem;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 2rem;
+            background: white;
+            border: none;
+            border-bottom: 1px solid #eee;
         }
 
         .person-name {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             font-weight: bold;
             margin-bottom: 0.5rem;
             display: block;
-            color: #fff;
+            color: #333;
         }
 
         .person-role {
             font-size: 0.9rem;
-            color: #888;
-            margin-bottom: 1.5rem;
+            color: #666;
+            margin-bottom: 1rem;
             display: block;
-            font-weight: normal;
         }
 
         ul {
             padding-left: 20px;
-            color: #d0d0d0;
+            color: #333;
         }
 
         li {
-            margin-bottom: 1rem;
+            margin-bottom: 0.8rem;
         }
 
         .present-section {
-            background-color: #1a1a1a;
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 15px;
-            border-left: 3px solid #666;
+            background-color: #fff8e1;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+            border-left: none;
         }
 
         strong {
-            color: #fff;
-            /* Highlight color for dark mode */
-            font-weight: bold;
-        }
-
-        .highlight-text {
-            color: #ffda79;
-            /* Gold/yellow for special emphasis */
+            color: #d32f2f;
+            /* Highlight color */
         }
 
         footer {
-            margin-top: 5rem;
+            margin-top: 4rem;
             text-align: center;
             font-size: 0.9rem;
             color: #666;
-            padding-bottom: 3rem;
+            padding-bottom: 2rem;
         }
 
         a {
-            color: #fff;
+            color: #000;
             text-decoration: underline;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
         }
 
         /* Podcast Section */
         .podcast-section {
             margin-top: 4rem;
             text-align: center;
-            background: linear-gradient(135deg, #111 0%, #222 100%);
-            padding: 3rem;
-            border-radius: 16px;
-            border: 1px solid #333;
+            background-color: #f0f0f0;
+            padding: 2rem;
+            border-radius: 8px;
+            border: none;
         }
 
         .podcast-btn {
             display: inline-block;
             background-color: #1DB954;
             color: white;
-            padding: 12px 30px;
+            padding: 10px 20px;
             text-decoration: none;
-            border-radius: 30px;
+            border-radius: 20px;
             font-weight: bold;
-            transition: background-color 0.3s ease;
-            margin-top: 1rem;
-        }
-
-        .podcast-btn:hover {
-            background-color: #1ed760;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -208,8 +182,8 @@
         <div class="intro">
             <p>2025年の瀬、広島の「Bar Last Tango in Paris」の3階を貸し切り、株式会社逆光主催の忘年会が開催されました。<br>
                 集まったのは、広島を拠点に活動するデザイナー、ライター、フォトグラファー、映像クリエイター、エンジニア、そして便利屋まで。</p>
-            <p>お食事は、日之出水産が運営する練り物専門店<strong class="highlight-text">「ネッテ」</strong>の「練り物」や「カリカリがんす」。<br>
-                <strong class="highlight-text">皆さん、ぜひ「ネッテ」に行ってくださいね！</strong><br>
+            <p>お食事は、日之出水産が運営する練り物専門店<strong>「ネッテ」</strong>の「練り物」や「カリカリがんす」。<br>
+                <strong>皆さん、ぜひ「ネッテ」に行ってくださいね！</strong><br>
                 酒と美食、そしてクリエイティブな会話に酔いしれた一夜の全記録です。
             </p>
         </div>
@@ -272,8 +246,8 @@
                             <li><strong>「元保育士」</strong>: 4年前まで保育士をしていた異色の経歴。そこからデザインを学び、現在はバリバリのデザイナーに。</li>
                         </ul>
                     </li>
-                    <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
+                    <li class="present-section"><strong>【プレゼント】</strong>: <strong>PAPIER
+                            D'ARMENIE（紙のお香）</strong><br>「社長が言うセンス」として選ばれた一品。</li>
                 </ul>
             </div>
 
@@ -386,7 +360,7 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
+                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
                 </ul>
             </div>
 
@@ -416,8 +390,8 @@
                             <li>バイクスタントのイベントを主催。「もっと面白く、大きく」をモットーに活動中。</li>
                         </ul>
                     </li>
-                    <li class="present-section"><strong>【プレゼント】</strong>: <strong>PAPIER
-                            D'ARMENIE（紙のお香）</strong><br>「社長が言うセンス」として選ばれた一品。急遽参加が決まった中で、間違いのないセンスを発揮。</li>
+                    <li class="present-section"><strong>【プレゼント】</strong>:
+                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
                 </ul>
             </div>
 
@@ -454,7 +428,8 @@
         </section>
 
         <section class="podcast-section">
-            <h2 style="margin-top: 0; border: none; padding: 0; background: none;">🎙️ 毎週火曜日は「逆張りマーケラジオ」</h2>
+            <h2 style="margin-top: 0; border: none; padding: 0; background: none; color: #333;">🎙️ 毎週火曜日は「逆張りマーケラジオ」
+            </h2>
             <p>逆光メンバーの思考や裏側を配信中。毎週火曜日の更新をぜひお聴きください！</p>
             <a href="https://open.spotify.com/show/02abD398asPC5qrUWzEf88?si=68ad6aec8bfc48ad" target="_blank"
                 class="podcast-btn">Spotifyで聴く</a>
